--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.5",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "next": "15.2.4",
     "p5": "^1.11.3",
