changes into the how work influencer cards influencer market place service adding the media section

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
