--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.4",
     "p5": "^1.11.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "three": "^0.175.0",
     "vanta": "^0.5.24"
