--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@studio-freight/lenis": "^1.0.42",
-    "axios": "^1.8.4",
+    "axios": "^1.11.0",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "next": "15.2.4",
+    "nodemailer": "^7.0.5",
     "p5": "^1.11.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
